@startuml

class SpenObjectStroke {

}

class StrokeModel {
    - String penType
    - int color
    - float size
    - String advancedSetting
    - int mUserId
    - String mDefaultePenName
    - String mPenName
    - float mPenSize
    - int mColor
    - String mAdvancedPenSetting
    - float[] mXPoints
    - float[] mYPoints
    - float[] mPressures
    - int[] mTimeStamps
    - float[] mTilts
    - float[] mOrientations
    - int mToolType
    - float mRotation
    - int mResizeOption
    - float[] mRect
}

class StepModel {
    - int seq
    - ArrayList<StrokeModel> strokes
}

class StrokeModelConvertUtils {
    + {static} StrokeModel convertToStrokeModel(final SpenObjectStroke spenStroke)
    + {static} SpenObjectStroke convertToSpenObjectStroke(final StrokeModel stroke)
}

StepModel "1" --o "1..n" StrokeModel

StrokeModelConvertUtils --> StrokeModel
StrokeModelConvertUtils --> SpenObjectStroke


@enduml